<resources>
    <string name="alwaysUse">Always complete such an action using this app</string>
    <string name="connect_joystick_notification_title">External joystick connected</string>
    <string name="connect_keyboard_notification_title">External keyboard connected</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="date_time_done">Done</string>
    <string name="datetime_dialog_title">Set Date&amp;Time</string>
    <string name="disconnect_joystick_notification_title">External joystick removed</string>
    <string name="disconnect_keyboard_notification_title">External keyboard removed</string>
    <string name="global_action_quickpower_off">Quick start is off</string>
    <string name="global_action_quickpower_on">Quick start is on</string>
    <string name="global_action_rboot_message">You may press and hold power button for 10 seconds to force restart the device.</string>
    <string name="global_action_reset">Restart</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="multi_language_20404">China Telecom</string>
    <string name="multi_language_46000">China Mobile</string>
    <string name="multi_language_46001">China Unicom</string>
    <string name="multi_language_46002">China Mobile</string>
    <string name="multi_language_46003">China Telecom</string>
    <string name="multi_language_46007">China Mobile</string>
    <string name="multi_language_46019">460 19</string>
    <string name="noApplications">No apps available for this action</string>
    <string name="no_content">No corresponding content</string>
    <string name="ota_mount_notification_message">Copy files between the phone and the external storage device.</string>
    <string name="ota_mount_notification_title">External storage device connected</string>
    <string name="ota_unexpectedly_removed_notification_message">Unmount the external storage device before removing it to avoid data loss.</string>
    <string name="ota_unexpectedly_removed_notification_title">External storage device unexpectedly removed</string>
    <string name="ota_unmount_notification_message">Unmount the external storage device so that you can safely remove it.</string>
    <string name="ota_unmount_notification_title">Unmount the external storage device</string>
    <string name="ota_unmounted_notification_title">External storage device unmounted</string>
    <string name="pppoe_indicator_detail_connect_failure">Disconnected</string>
    <string name="pppoe_indicator_detail_connected">Connected</string>
    <string name="pppoe_indicator_detail_connecting">Connecting...</string>
    <string name="pppoe_indicator_title">PPPOE</string>
    <string name="reboot_confirm">Your phone will restart.</string>
    <string name="reboot_confirm_question">Do you want to restart it?</string>
    <string name="reboot_title">Restart</string>
    <string name="search_go">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_query">Search query</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="set_silent">Silent</string>
    <string name="system_res_label">System Resources Package</string>
    <string name="textoff" />
    <string name="texton" />
    <string name="time_picker_decrement_hour_button">Decrease hour</string>
    <string name="time_picker_decrement_minute_button">Decrease minute</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_increment_hour_button">Increase hour</string>
    <string name="time_picker_increment_minute_button">Increase minute</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="toast_wifi_connected_message">The phone has been connected to SSID %1$s.</string>
    <string name="whichApplication">Complete the action using</string>
    <string name="whichHomeApplication">Select a home app</string>
    <string name="wifi_hotspot_turned_off">Hotspot turned off</string>
    <string name="wifi_hotspot_turned_off_summary">Sleep time is activated, you can modify it in hotspot-Advanced-Hotspot sleep policy.</string>
    <string name="zte_days_of_week_Fri">Fri</string>
    <string name="zte_days_of_week_Mon">Mon</string>
    <string name="zte_days_of_week_Sat">Sat</string>
    <string name="zte_days_of_week_Sun">Sun</string>
    <string name="zte_days_of_week_Thu">Thu</string>
    <string name="zte_days_of_week_Tue">Tue</string>
    <string name="zte_days_of_week_Wed">Wed</string>
    <string name="back_button_label">Back</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="zte_config_ntpServer">time.izatcloud.net</string>
    <string name="zte_config_secondary_ntpServer">cn.pool.ntp.org</string>
    <string name="config_dreamsDefaultComponent">com.android.dreams.basic/com.android.dreams.basic.Colors</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="search_hint">Search...</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="day_picker_description">Month grid</string>
    <string name="deleted_key">%1$s has been deleted.</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="item_is_selected">%1$s has been selected.</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="sans_serif">sans-serif</string>
    <string name="select_day">Select a day of the month</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="select_year">Select a year</string>
    <string name="time_placeholder">--</string>
    <string name="year_picker_description">Year list</string>
    <string name="overtemp_to_shutdown">overtemp_to_shutdown</string>
    <string name="over_temprature">over_temprature</string>
    <string name="global_action_poweroff">Shut down</string>
    <string name="airplane_on">Airplane mode</string>
    <string name="airplane_off">Airplane mode</string>
    <string name="ring">Ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Mute</string>
    <string name="sim_name">SIM%1$d</string>
    <string name="spn_china_telecom">China Telecom</string>
    <string name="spn_china_unicom">China Unicom</string>
    <string name="spn_china_mobile">China Mobile</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="mfv_zteextres_version">4.0.2.0811</string>
    <string name="action_mode_done">Done</string>
    <string name="lunar">Lunar</string>
    <string name="wifi_max_client_notification">Maximum Mobile Hotspot connections reached. Please disconnect one device to enable the new device connection.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="prepend_shortcut_label">Menu+</string>
    <string name="menu_space_shortcut_label">space</string>
    <string name="menu_enter_shortcut_label">enter</string>
    <string name="menu_delete_shortcut_label">delete</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="power_off">Power off</string>
    <string name="navibar">show</string>
    <string name="title_eraser_set">Eraser Settings</string>
    <string name="title_pen_set">Brush Settings</string>
    <string name="erase_all">Erase ALL</string>
    <string name="quit_warning">Click again to exit without saving！</string>
    <string name="app_name">Mi-POP</string>
    <string name="mipop_title">Mi-POP</string>
    <string name="mipop_switch_title">Mi-POP</string>
    <string name="mipop_fullscreen_title">Hide the navigation bar</string>
    <string name="widgetName">Mi-pop</string>
    <string name="widgetText">Mi-pop</string>
    <string name="fullscreenmode">Fullscreen mode</string>
    <string name="fullscreenmodeon">Hide Mi-POP and navigation bar</string>
    <string name="fullscreenmodeoff">Redisplay Mi-POP and navigation bar</string>
    <string name="Save">Save</string>
    <string name="Discard">Discard</string>
    <string name="Share">Share</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="reboot">Restart</string>
    <string name="mute">Mute</string>
    <string name="no_support">Land not support!</string>
    <string name="partScreem">Part</string>
    <string name="mipop_help_title">Help</string>
    <string name="mipop_update_title">Update version</string>
    <string name="smart_remind_known">OK</string>
    <string name="pictures_mipop">Pictures</string>
    <string name="full_screen">Navigation bar</string>
    <string name="mipop_switch_summary">Once Mi-POP is enabled, you can tap buttons on it to return to a previous page, the Home screen, the menu, or recently used apps, by using a single hand.</string>
    <string name="mipop_switch_summary_press">When enabled, you can tap buttons on it to return to the previous page, the Home screen, or recently used apps, and you can also press Mi-POP to return to the Home screen.</string>
    <string name="mipop_fullscreen_summary">Hide the navigation bar at the bottom</string>
    <string name="SaveTO">"Saved to: "</string>
    <string name="SaveFail">Unable to save it</string>
    <string name="lock_screen">Lock screen</string>
    <string name="screenshots">Screenshot</string>
    <string name="volume">Full volume</string>
    <string name="fullScreem">Full screen</string>
    <string name="Paint">Doodle</string>
    <string name="mipop_first_key_title">Default key</string>
    <string name="mipop_update_summary">Current version:</string>
    <string name="can_not_find_version_name">Unknown version</string>
    <string name="no_networks">No network available. Verify that you are connected to the network.</string>
    <string name="help">Help</string>
    <string name="help1">Tap the button and set it to return to previous screen or return to Home screen; Press hard on the button to return to Home screen.</string>
    <string name="help2">Press the button and swipe on it to unfold Mi-POP; It automatically retracts when swiping on it again or after 2 seconds of inactivity; Press the button and drag it vertically or drag it more than half the screen to move it.</string>
    <string name="help3">Press &amp; hold the button for menu options: shut down, restart, lock screen, capture screen, sound on/off.</string>
    <string name="help4">4. Tap &amp; hold Back to quickly start or close Mi-POP.</string>
    <string name="smart_remind_shortcut">Tap and hold Back on navigation bar to quickly enable or disable Mi-POP.</string>
    <string name="smart_remind_long_press">Tap &amp; hold Mi-POP to display a range of operations.</string>
</resources>